using UnityEngine;
using System.Collections;

public class EnemyAWConst : MonoBehaviour {
	public const string PLAYER = "Player";
	public const string ENEMY = "Enemy";
	public const string FIELD_EDGE = "FieldEdge";
	public const string FIELD_TOP = "FieldTop";
	public const string GROUND = "Ground";
	public const string ENEMY_BOUNCING = "EnemyBouncing";

	public const string WALK = "Walk";
	public const string JUMP = "Jump";
	public const string IDLE = "Idle";
	public const string DIE = "Die";

	public const string VERTICAL = "Vertical";
	public const string HORIZONTAL = "Horizontal";
	public const string SPEED = "Speed";
	public const string SHOT = "Shot";

	public const string PLAYER_BULLET = "PlayerBullet";
	public const string FIRE = "Fire1";
}
